Finally fixed long-standing SVG resize bug on mobile (SVGs now scale to horizontal width), changed 'baseline' to 'recently' temporarily for pulse.

--- a/app/styles/components.scss
+++ b/app/styles/components.scss
@@ -7,11 +7,17 @@
   fill: white; font-size: 12px; text-anchor: middle;
 }
 
+/* ora-pulsing-logo, very similar to ora-pulse */
+.ora-pulsing-logo { width: 300px; height: 300px; }
+.ora-pulsing-logo svg { width: 100%; height: 100%; }
+
 /* ora-pulse */
 .ora-pulse {
   margin: 0px auto;
   margin-bottom: 10px;
 }
+/* ensure it expands to fill the container */
+.ora-pulse, .ora-pulse svg { width: 100%; }
 
 .ora-pulse text {
   fill: white;
@@ -19,7 +25,7 @@
   text-anchor: middle;
 }
 
-.ora-pulse circle.baseline {
+.ora-pulse circle.recently {
   fill: none;
   stroke: white;
   stroke-width: 1;
